gitlab/ingress/gitlab_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab-app-ingress
  namespace: gitlab
  labels:
    name: gitlab-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  tls:
    - secretName: tls
      hosts:
        - gitlab.example.com

  rules:
  - host: gitlab.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gitlab-app
          servicePort: 8005
