gitlab/ingress/registry_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab-registry-ingress
  namespace: gitlab
  labels:
    name: gitlab-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  tls:
    - secretName: tls
      hosts:
        - registry.example.com
  rules:
  - host: registry.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gitlab-registry
          servicePort: 5000
